# zvec-harmonyos

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  build_zvec_ohos.ps1
patches/: zvec-0.4.0-ohos.patch
smoke/: CMakeLists.txt  zvec_smoke.cpp  zvec_smoke.h
